--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Matt Pollari</h1>
 
-  <img src="https://placehold.it/200x200" alt="Matt Pollari">
+  <img src="matt.jpg"  alt="Matt Pollari" width="200" height="200">
 
   <p>I am an experienced Data Specialist with a demonstrated history of working in the non-profit organization management industry. I have a strong work ethic with attention to detail. Strong skills in teamwork and being able to train others. </p>
 
